# CoCap

./: README.md  pyproject.toml  requirements.txt
cocap/: __init__.py  run_net.py  torchrun_net.py
cocap/config/: __init__.py  base.py
cocap/config/custom_config/: compressed_video.py
cocap/data/: __init__.py  build.py
cocap/data/datasets/: __init__.py
cocap/data/datasets/compressed_video/: __init__.py  (+7 more)
cocap/layers/: bert.py
cocap/layers/clip/: clip.py  model.py
cocap/modeling/: __init__.py  eval_captioning.py  lm_cocap.py  loss.py  meter.py  model.py  optimization.py  optimizer.py
cocap/modeling/common/: common_meter.py
cocap/modeling/compressed_video/: compressed_video_transformer.py  loss_function.py  modeling.py  optimization.py
cocap/modules/: __init__.py  bert.py
cocap/modules/clip/: clip.py  model.py
cocap/modules/compressed_video/: __init__.py  compressed_video_captioner.py  compressed_video_transformer.py
cocap/trainer/: build.py  cocap_trainer.py
cocap/utils/: __init__.py  checkpoint.py  image.py  json.py  logging.py  profile.py  registry.py  train_utils.py  visualize.py  writer.py
configs/dataset/: msrvtt.yaml  msvd.yaml  vatex.yaml
configs/exp/train/: base.yaml  msrvtt_captioning.yaml  msvd_captioning.yaml  vatex_captioning.yaml
test/: __init__.py
test/cocap/: __init__.py
test/cocap/data/: __init__.py
test/cocap/modules/: __init__.py
test/cocap/utils/: __init__.py  test_train_utils.py
tools/: check_video_integrity.py  checkpoint_tweak.py  compute_cider.py  show_registry.py  train_net.py  video_convert.py
(+7 files in other folders)
